test/negative/parse_nested_func.mut
# Negative: function defined inside function (not allowed)
def outer() -> i64
    def inner() -> i64
        return 1
    end
    return inner()
end
